--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       </div>
 
       <!-- Footer -->
-      <div  >
+      <!-- <div  >
       <div class="container custom-header d-flex justify-content-between align-items-center" >
         <a class="navbar-brand my-3" href="#"  style="color:black !important">
             <div class="d-flex align-items-center justify-content-between align-items-center">
@@ -271,6 +271,6 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
             Telangana 500070
         </div>
       </div>
-    </div>
+    </div> -->
 </body>
 </html>
